--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 
 <body>
+    <h1>大标题</h1>
+
+
+    <script src="./index.js"></script>
 
 </body>
 
